--- a/show_ver.yml
+++ b/show_ver.yml
@@ -10,4 +10,4 @@
       username: admin
       password: cisco
      register: ver
-   - debug: msg="{{ ver.stdout }}"
+   - debug: msg="{{ ver.stdout | json_pretty }}"
